Bug 497541 - Autocomplete dropdown should update when text inserted before end. r=gavin